-
Bug
-
Resolution: Done
-
P4: Low
-
5.10.1, 5.11.1
-
None
-
-
46fc3d3729df9e81e42f87c46907d6eb81a0c669 (qtbase.5.11, 1.8,2018,.5.11.2)
To reproduce:
- setOverrideCursor for QApplication
- move mouse outside window
- move mouse inside window
It works properly on Qt 5.10
On Qt 5.10.1 - it resets custom cursor
On Qt 5.11.1 - it keeps frame border cursor (Windows)
#include <QMainWindow> #include <QApplication> int main(int argc, char *argv[]) { QApplication a(argc, argv); QMainWindow w; a.setOverrideCursor(Qt::CrossCursor); w.show(); return a.exec(); }
- relates to
-
QTBUG-58590 [REG: 4->5]: QApplication::setOverrideCursor only works on modal window
-
- Closed
-
-
QTBUG-98856 Wrong cursor showing when restoreOverrideCursor in QDockWidget
-
- Closed
-
| For Gerrit Dashboard: QTBUG-69637 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 235500,2 | Windows QPA: Fix override cursor being cleared when crossing window borders | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |